@@ -84,6 +84,7 @@
       <li><a href='date_math/index.html'>Date Math</a></li>
       <li><a href='parseExact/index.html'>ParseExact</a></li>
       <li><a href='core/index.html'>Core Library</a></li>
+      <li><a href='sugarpak/index.html'>Sugarpak</a></li>	  
       <li><a href='tostring/index.html'>.toString Function</a></li>
       <li><a href='dst/index.html'>Daylight Saving Time</a></li>	  
       <li><a href='culture_info/index.html'>CulturalInfo (es-MX)</a></li>
